[package]
name = "yasp"
version = "0.1.0"
authors = ["you06 <you1474600@gmail.com>"]
edition = "2018"

[build-dependencies]
lalrpop = {version="0.19.0", features = ["lexer"]}

[workspace]
members = [
    ".",
    "./src/ast",
    "./src/datum",
    "./src/error",
    "./src/parser_lalrpop"
]

default-members = [
    ".",
    "./src/ast",
    "./src/datum",
    "./src/error",
    "./src/parser_lalrpop"
]

[dependencies]
yasp_ast = { path = "./src/ast" }
yasp_datum = { path = "./src/datum" }
yasp_error = { path = "./src/error" }
yasp_parser_lalrpop = { path = "./src/parser_lalrpop" }
